Aggiunti i primi due file per l'importazione

--- a/code/index.html
+++ b/code/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html>
   <head>
-        <title>Introduzione a JavaScript</title>  
-        <!-- <script src="js/"></script> -->
+    <title>Introduzione a JavaScript</title>  
+    <script src="js/console.js"></script>
+    <!-- <script src="js/variabili.js"></script> -->
   </head>
   <body>
     
