--- a/code/index.html
+++ b/code/index.html
@@ -1,11 +1,10 @@
 <!doctype html>
 <html>
   <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Introduzione a JavaScript</title>  
     <script src="js/console.js"></script>
     <!-- <script src="js/variabili.js"></script> -->
   </head>
-  <body>
-    
-  </body>
+  <body></body>
 </html>
