--- a/code/index.html
+++ b/code/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Introduzione a JavaScript</title>  
-    <script src="js/console.js"></script>
+    <!-- <script src="js/console.js"></script> -->
     <!-- <script src="js/variabili.js"></script> -->
     <!-- <script src="js/const_let_var.js"></script> -->
     <!-- <script src="js/ternary_operator.js"></script> -->
