Aggiunto commento alla riga

--- a/code/index.html
+++ b/code/index.html
@@ -6,7 +6,7 @@
     <!-- <script src="js/console.js"></script> -->
     <!-- <script src="js/variabili.js"></script> -->
     <!-- <script src="js/const_let_var.js"></script> -->
-    <script src="js/formato_json.js"></script>
+    <!-- <script src="js/formato_json.js"></script> -->
     <!-- <script src="js/ternary_operator.js"></script> -->
     <!-- <script src="js/arrow_function.js"></script> -->
     <!-- <script src="js/template_literals.js"></script> -->
