--- a/code/index.html
+++ b/code/index.html
@@ -6,12 +6,13 @@
     <!-- <script src="js/console.js"></script> -->
     <!-- <script src="js/variabili.js"></script> -->
     <!-- <script src="js/function.js"></script> -->
-    <script src="js/array.js"></script>
+    <!-- <script src="js/array.js"></script> -->
     <!-- <script src="js/const_let_var.js"></script> -->
     <!-- <script src="js/formato_json.js"></script> -->
     <!-- <script src="js/ternary_operator.js"></script> -->
     <!-- <script src="js/template_literals.js"></script> -->
     <!-- <script src="js/classi.js"></script> -->
+    <!-- <script src="js/iteration_array.js"></script> -->
     <!-- <script src="js/moduli_require.js"></script> -->
   </head>
   <body></body>
