--- a/code/index.html
+++ b/code/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
   <head>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Introduzione a JavaScript</title>  
     <!-- <script src="js/console.js"></script> -->
