Aggiunto codice di esempio per le require

--- a/code/index.html
+++ b/code/index.html
@@ -15,7 +15,9 @@
     <!-- <script src="js/template_literals.js"></script> -->
     <!-- <script src="js/classi.js"></script> -->
     <!-- <script src="js/iteration_array.js"></script> -->
-    <!-- <script src="js/moduli_require.js"></script> -->
+    <script src="js/moduli_require.js"></script>
+      <script src="js/modules/lib1.js"></script>
+      <script src="js/modules/lib2.js"></script>
   </head>
   <body></body>
 </html>
