--- a/code/index.html
+++ b/code/index.html
@@ -9,14 +9,14 @@
     <!-- <script src="js/variabili.js"></script> -->
     <!-- <script src="js/function.js"></script> -->
     <!-- <script src="js/array.js"></script> -->
-    <!-- <script src="js/const_let_var.js"></script> -->
+    <script src="js/const_let_var.js"></script>
     <!-- <script src="js/formato_json.js"></script> -->
     <!-- <script src="js/ternary_operator.js"></script> -->
     <!-- <script src="js/template_literals.js"></script> -->
     <!-- <script src="js/iteration_array.js"></script> -->
-    <script src="js/moduli_require.js"></script>
+    <!--<script src="js/moduli_require.js"></script>
       <script src="js/modules/lib1.js"></script>
-      <script src="js/modules/lib2.js"></script>
+      <script src="js/modules/lib2.js"></script>-->
   </head>
   <body></body>
 </html>
